# gameathon-model-webapp

./: .gitignore  JUDGE_BRIEFING.md  JUDGE_QA.txt  MANUAL.md  MANUAL.txt  Modelfile  README.md  fix_audio.ps1  fix_css.ps1  global_publish.ps1  render.yaml  start.bat  verify_hardening.ps1  verify_hardening_fixed.ps1  verify_hardening_verbose.ps1
.cargo/: config.toml
.github/workflows/: build-apk.yml  build-desktop.yml
backend/: Cargo.toml
backend/src/: main.rs
frontend/: attacker.html  attacker.js  chatbot.js  demo.html  game.js  index.html  launcher.html  manifest.json  recorder.js  serve.js  style.css  sw.js  test.html  test_runner.js  unified.html
public_site/: index.html
